src/routes/global.css
:root {
  --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
  --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
  --font-size-xl: clamp(1.44rem, 1vw + 1.6rem, 2rem);

  --border-color-gray: hsl(0, 0%, 80%); /* #ccc */

  /* has "dark" versions */
  --color-link-text: #0000ee;
  --color-text: hsl(12, 5%, 4%);
  --color-bg: hsl(10, 21%, 95%);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-link-text: #86a0ee;
    --color-text: hsl(0, 100%, 95%);
    --color-bg: hsl(198, 100%, 11%);
  }
}

html {
  font-family: system-ui, sans-serif;
  font-size: var(--font-size-base);
  color: var(--color-text);
  background-color: var(--color-bg);
}

body {
  margin: 0;
}

h1 {
  font-size: var(--font-size-xl);
}

h1:first-child {
  margin-top: 0;
}

h2 {
  font-size: var(--font-size-lg);
  margin-top: 3rem;
  border-bottom: 1px solid var(--border-color-gray);
}

ul {
  list-style-type: "- ";
  padding: 0 12px; /* counter balances the default offset so that the dash lines up with the left content */
}

code {
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

a,
a:visited {
  color: var(--color-link-text);
}
a[aria-disabled="true"] {
  pointer-events: none;
  opacity: 0.5;
  text-decoration: none;
}

